--- a/Wildcat.Http/index.htm
+++ b/Wildcat.Http/index.htm
@@ -4,7 +4,8 @@
         <script language="javascript" src="Client/require.js"></script>
         <script language="javascript" src="Client/jquery-1.7.2.js"></script>
         <script language="javascript" src="Client/Wildcat.js"></script>
-        <script language="javascript" src="Client/Wildcat/Core.js"></script>
+        <script language="javascript" src="Wildcat.wcjs"></script>
+        <script language="javascript" src="Photo.wcjs"></script>
         <title></title>
     </head>
 	<body>
