--- a/Wildcat.Http/index.html
+++ b/Wildcat.Http/index.html
@@ -1,14 +1,13 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
     <head>
-        <script language="javascript" src="/Client/require.js"></script>
-        <script language="javascript" src="/Client/jquery-1.7.2.js"></script>
         <script language="javascript" src="/Client/Wildcat.js"></script>
         <script language="javascript" src="/Wildcat.wcjs"></script>
         <script language="javascript" src="/Music.wcjs"></script>
+        <link href="/Client/Music/Style/bootstrap.min.css" rel="stylesheet" type="text/css">
         <title></title>
     </head>
-	<body>
+	<body data-spy="scroll" data-target=".subnav" data-offset="50" style="position: relative;padding-top: 90px;">
 	
 	</body>
 </html>
