--- a/Wildcat.Http/index.html
+++ b/Wildcat.Http/index.html
@@ -1,10 +1,9 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
     <head>
-        <script language="javascript" src="/Client/Wildcat.js"></script>
-        <script language="javascript" src="/Wildcat.wcjs"></script>
-        <script language="javascript" src="/Music.wcjs"></script>
-        <link href="/Client/Music/Style/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <script language="javascript" src="/Wildcat.js"></script>
+        <script language="javascript" src="/Music.js"></script>
+        <link href="/Music.css" rel="stylesheet" type="text/css">
         <title></title>
     </head>
 	<body data-spy="scroll" data-target=".subnav" data-offset="50" style="position: relative;padding-top: 90px;">
